--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.6.2"
 GitPython = "^3.1.0"
 
 [tool.poetry.dev-dependencies]
+bump2version = "^1.0.1"
 
 [tool.poetry.plugins."flox.plugin"]
 git = "flox_git:plugin"
