--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ license = "MIT"
 [tool.poetry.dependencies]
 python = "^3.6.2"
 GitPython = "^3.1.0"
+flox-core = ">=0.2,<1.0.0"
 
 [tool.poetry.dev-dependencies]
 bump2version = "^1.0.1"
