--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ homepage = "https://github.com/getflox/flox-git"
 description = "Bootstrap git repository for your project managed by flox."
 authors = ["Michal Przytulski <michal@przytulski.pl>", "Daniel Ancuta <whisller@gmail.com>"]
 license = "MIT"
+readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.6.2"
